# budget-manager

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Dockerfile  LICENSE  MANIFEST.in  METRICS.md  Makefile  README.md  _config.yml  budget  budget-manager.code-workspace  demo.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  styles.css
.github/: REPOSITORY_SETTINGS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  metrics.yml  release.yml
data/: budget_manager.db
docs/: api.md  dashboard.html  index.md  installation.md  usage.md
examples/: README.md  performance_demo.sh  portfolio_demo.sh  quick_demo.sh
src/budget_manager/: __init__.py  cli.py  database.py  models.py  reports.py
src/budget_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_database.py  test_models.py
